<resources>
    <string name="app_name">Common</string>
    <string name="systemerror">很抱歉,程序出现异常!</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用权限缺失</string>
    <string name="rate">录取率：%1$s</string>
    <string name="my_rate">我的录取率：%1$s</string>
    <string name="local_rank">国内排名：%1$s</string>
    <string name="speName">专业名称：%1$s</string>
    <string name="speEgName">专业英文名：%1$s</string>
    <string name="cancle">取消</string>
    <string name="usa">美国</string>
    <string name="uk">英国</string>
    <string name="ca">加拿大</string>
    <string name="au">澳大利亚</string>
    <string name="loading">正在加载...</string>
    <string name="update">更新</string>
    <string name="search">搜索</string>
    <string name="myinfo">个人信息</string>
    <string name="sure">确定</string>
    <string name="choose_pic">选择图片</string>
    <string name="no_external_storage">暂无外部存储</string>
    <string name="scan_no_picture">没扫描到图片</string>
    <string name="picture_unit">张</string>
    <string name="take_photo">拍摄照片</string>
    <string name="picture_max">最多只能同时上传9张图片</string>
    <string name="picture_load_failure">图片加载失败</string>
    <string name="move_and_zoom">移动和缩放</string>
    <string name="enter_phone">请输入正确的手机号码</string>
    <string name="not_null">%1$s不能为空！</string>
    <string name="login">登录</string>
    <string name="relogin">重新登录</string>
    <string name="logout_notify">下线通知</string>
    <string name="login_now">您还未登录，立即登录？</string>
    <string name="loginout_msg">你的账号已在其他设备上登录，是否重新登录？</string>
    <string name="blocked_msg">你的账号已被禁用，如有疑问请联系管理员！</string>
    <string name="permission_get_accounts">获取用户</string>
    <string name="get_security_code">获取验证码</string>
    <string name="get_code_again">重新发送(%1$s)</string>
    <string name="send_again">重新发送</string>
    <string name="myschool_tip">代表该所院校并非您的意向国家【%1$s】所属学校</string>
    <string name="page_empty_tip">抱歉，没有相关数据哦～</string>
    <string name="no_search_tip">抱歉，没有找到你想要的内容哦～</string>
    <string name="no_search_qa_tip">抱歉，没有找到相关提问哦～</string>
    <string name="no_net_tip">连接不上网络啦～</string>
    <string name="no_collection_tip">还没有收藏的内容哦～</string>
    <string name="no_qa_tip">还没有提过问题哦～</string>
    <string name="no_school_tip">抱歉，没有与你相匹配的院校哦～</string>
    <string name="news_see">%1$s人浏览</string>
    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收起</string>

    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="ad_loop">跳过 %1$d</string>
    <string name="visit_count">%1$s人看过</string>
    <string name="visa_see">%1$s人浏览</string>
    <string name="save_failed">保存失败！</string>
    <string name="file_save_to">当前文件已经保存至目录：</string>

    <string name="send_to">发送给：</string>
    <string name="send">发送</string>
    <string name="word">留言</string>
    <string name="open_qrcode">识别图中二维码</string>
</resources>
